force-app/main/default/objects/Account_Goal__c/Account_Goal__c.object-meta.xml
<CustomObject>
    <label>Dell Account Objective</label>
    <nameField>
        <label>Dell Account Objective Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dell Account Objectives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>