force-app/main/default/objects/Account_Goal__c/fields/Acct_Plan__c.field-meta.xml
<CustomField>
    <fullName>Acct_Plan__c</fullName>
    <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc - R.10.2 Custom Field for Account Planning||
SFA -Y/PRM-N||
VAL -  N||
CR# -R10.2 # 35778  ||</description>
    <label>Acct Plan</label>
    <referenceTo>SFDC_Acct_Plan__c</referenceTo>
    <relationshipName>Account_Goals1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>