force-app/main/default/objects/Account_Goal__c/fields/Closed_Objective_Details__c.field-meta.xml
<CustomField>
    <fullName>Closed_Objective_Details__c</fullName>
    <inlineHelpText>Specify reasons for closing the objective, including any information which may be relevant to future account planning. Whether the objective is achieved or otherwise, the user should specify details as appropriate for capturing results for future analysis</inlineHelpText>
    <label>Closed Objective Details</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>