force-app/main/default/objects/Account_Goal__c/fields/Dell_Account_Objective_Achieved__c.field-meta.xml
<CustomField>
    <fullName>Dell_Account_Objective_Achieved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dell Account Objective Closed?</label>
    <type>Checkbox</type>
</CustomField>