force-app/main/default/objects/Account_Goal__c/fields/Key_Business_Problem__c.field-meta.xml
<CustomField>
    <fullName>Key_Business_Problem__c</fullName>
    <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc - R.10.2 Custom Field for Account Planning||
SFA -Y/PRM-N||
VAL -  N||
CR# -R10.2 # 35778  ||</description>
    <label>Key Business Problem</label>
    <type>TextArea</type>
</CustomField>